# musicbrainz_browser

./: Cargo.toml  README.md
src/: main.rs
src/data_providers/: mod.rs
src/gui/: message.rs  mod.rs  search.rs
src/model/: mod.rs
